Add TAP output for tests, use it to integrate with Meson
Instead of building a single run-tests executable, we build lots of
smaller tests which output TAP.  This is simple enough that I think
we can drop the µnit dependency, and it has a few advantages such as
built-in support for parallel tests and better integration with
tooling.

The µnit version will remain in place for now, but only work with
CMake.  Meson, OTOH, will only work with this.  I plan to remove
CMake support in the relatively near future, just need to get a few
remaining builds swiched over.

--- a/test/arm/neon/meson.build
+++ b/test/arm/neon/meson.build
@@ -4,18 +4,26 @@ foreach name : simde_neon_families
     c_source = name + '.c'
     cpp_source = configure_file(input: name + '.c', output: name + '.cpp', copy: true)
     simde_test_arm_neon_sources += [c_source, cpp_source]
+
+    test('arm/neon/' + name + '/emul/c', executable(name + '-emul-c', c_source,
+        c_args: simde_c_args + simde_c_defs + simde_native_c_flags + ['-DSIMDE_NO_NATIVE', '-DSIMDE_TEST_BARE'],
+        include_directories: simde_include_dir,
+        dependencies: libm),
+      protocol: 'tap')
+    test('arm/neon/' + name + '/emul/cpp', executable(name + '-emul-cpp', cpp_source,
+        cpp_args: simde_c_args + simde_c_defs + simde_native_c_flags + ['-DSIMDE_NO_NATIVE', '-DSIMDE_TEST_BARE'],
+        include_directories: simde_include_dir,
+        dependencies: libm),
+      protocol: 'tap')
+    test('arm/neon/' + name + '/native/c', executable(name + '-native-c', c_source,
+        c_args: simde_c_args + simde_c_defs + simde_native_c_flags + ['-DSIMDE_TEST_BARE'],
+        include_directories: simde_include_dir,
+        dependencies: libm),
+      protocol: 'tap')
+    test('arm/neon/' + name + '/native/cpp', executable(name + '-native-cpp', cpp_source,
+        cpp_args: simde_c_args + simde_c_defs + simde_native_c_flags + ['-DSIMDE_TEST_BARE'],
+        include_directories: simde_include_dir,
+        dependencies: libm),
+      protocol: 'tap')
   endif
 endforeach
-
-simde_tests_arm_neon_emul = static_library('simde-tests-arm-neon-emul', simde_test_arm_neon_sources,
-  c_args: simde_c_args + simde_c_defs + simde_native_c_flags + ['-DSIMDE_NO_NATIVE'],
-  cpp_args: simde_c_args + simde_c_defs + simde_native_c_flags + ['-DSIMDE_NO_NATIVE'],
-  include_directories: simde_include_dir)
-
-simde_tests_arm_neon_native = static_library('simde-tests-arm-neon-native', simde_test_arm_neon_sources,
-  c_args: simde_c_args + simde_c_defs + simde_native_c_flags + simde_native_c_flags,
-  cpp_args: simde_c_args + simde_c_defs + simde_native_c_flags + simde_native_cxx_flags,
-  include_directories: simde_include_dir)
-
-simde_tests_arm_neon = static_library('simde-tests-neon', 'run-tests.c',
-  link_with: [simde_tests_arm_neon_emul, simde_tests_arm_neon_native])
