travis: actually run NEON tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -371,7 +371,7 @@ script:
   if [ "${RUN_TESTS}" = "true" ]; then
     if [ "windows" != "${TRAVIS_OS_NAME}" ]; then
       if command -v parallel; then
-        ${TEST_WRAPPER} ./run-tests${EXECUTABLE_EXTENSION} --list | grep -oP '^/([^\/]+)/([^\/]+)' | sort -u | xargs parallel ${TEST_WRAPPER} ./run-tests${EXECUTABLE_EXTENSION} ${TEST_ARG_SEPARATOR} {} ::: || exit 1
+        ${TEST_WRAPPER} ./run-tests${EXECUTABLE_EXTENSION} --list | grep -oP '^/(x86|arm/neon)/([^\/]+)' | sort -u | xargs parallel ${TEST_WRAPPER} ./run-tests${EXECUTABLE_EXTENSION} ${TEST_ARG_SEPARATOR} {} ::: || exit 1
       else
         ${TEST_WRAPPER} ./run-tests${EXECUTABLE_EXTENSION} || exit 1
       fi
