--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,7 @@
   command = 'mkdir -p web/amalgamated/x86 && (cd simde && for header in x86/*.h; do ../amalgamate.py "$header" > ../web/amalgamated/"$header"; done); mkdir -p web/amalgamated/arm && (cd simde/arm && ../../amalgamate.py neon.h > ../../web/amalgamated/arm/neon.h)'
 
 [[headers]]
-  for = "/amalgamated/x86/*.h"
+  for = "/amalgamated/*/*.h"
   [headers.values]
     Access-Control-Allow-Origin = "*"
 
