neon: add vshl and vshlq intrinsics

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -119,6 +119,7 @@ set(TEST_SOURCES_C
   arm/neon/orr.c
   arm/neon/padd.c
   arm/neon/pmin.c
+  arm/neon/shl.c
   arm/neon/shl_n.c
   arm/neon/shr_n.c
   arm/neon/sub.c
