neon: add vshl and vshlq intrinsics
Fixes #391

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -123,6 +123,7 @@ set(TEST_SOURCES_C
   arm/neon/padd.c
   arm/neon/pmin.c
   arm/neon/reinterpret.c
+  arm/neon/shl.c
   arm/neon/shl_n.c
   arm/neon/shr_n.c
   arm/neon/sub.c
