--- a/test/arm/neon/meson.build
+++ b/test/arm/neon/meson.build
@@ -1,23 +1,27 @@
-simde_test_arm_neon_sources = [
-  'add.c',
-  'and.c',
-  'bsl.c',
-  'dup_n.c',
-  'eor.c',
-  'get_high.c',
-  'get_low.c',
-  'min.c',
-  'mla.c',
-  'mul.c',
-  'mull.c',
-  'orr.c',
-  'padd.c',
-  'pmin.c',
-  'shl_n.c',
-  'shr_n.c',
-  'sub.c',
-  'uzp1.c',
-  'uzp2.c',
+simde_test_arm_neon_tests = [
+  'add',
+  'addw',
+  'and',
+  'bsl',
+  'cagt',
+  'dup_n',
+  'eor',
+  'get_high',
+  'get_lane',
+  'get_low',
+  'min',
+  'mla',
+  'mul',
+  'mull',
+  'orr',
+  'padd',
+  'pmin',
+  'reinterpret',
+  'shl_n',
+  'shr_n',
+  'sub',
+  'uzp1',
+  'uzp2',
 ]
 
 foreach src : simde_test_arm_neon_sources
