--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -232,5 +232,5 @@ foreach(tst
       "/x86/svml"
       "/arm"
     )
-  add_test(NAME "${tst}/${variant}" COMMAND ${CMAKE_CROSSCOMPILING_EMULATOR} $<TARGET_FILE:run-tests> "${tst}")
+  add_test(NAME "${tst}/${variant}" COMMAND $<TARGET_FILE:run-tests> "${tst}")
 endforeach()
