neon: implementation of pmax

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -123,6 +123,7 @@ set(TEST_SOURCES_C
   arm/neon/mull.c
   arm/neon/orr.c
   arm/neon/padd.c
+  arm/neon/pmax.c
   arm/neon/pmin.c
   arm/neon/reinterpret.c
   arm/neon/shl.c
