neon: implement zip1 and zip2
Fixes #402

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -131,7 +131,11 @@ set(TEST_SOURCES_C
   arm/neon/shr_n.c
   arm/neon/sub.c
   arm/neon/uzp1.c
-  arm/neon/uzp2.c)
+  arm/neon/uzp2.c
+  arm/neon/zip.c
+  arm/neon/zip1.c
+  arm/neon/zip2.c
+  )
 
 set(TEST_RUNNER_SOURCES
   run-tests.c
