--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,12 +72,7 @@ jobs:
     - name: Install pip Dependencies
       run: pip3 install meson
     - name: Download SDE
-      run: |
-        mkdir sde && \
-        curl -sL 'https://software.intel.com/content/www/us/en/develop/articles/pre-release-license-agreement-for-intel-software-development-emulator-accept-end-user-license-agreement-and-download.html' \
-          | grep -oP 'https?://software.intel.com/content/dam/develop/external/us/en/protected/sde-external-([0-9\.\-]+)-lin.tar.bz2' \
-          | xargs curl -sL \
-          | tar --strip-components 1 -jxvC sde
+      run: ./test/download-sde.sh sde
     - name: Configure
       run: ~/.local/bin/meson setup build -Db_coverage=true
     - name: Build
