--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -130,6 +130,7 @@ set(TEST_SOURCES_C
   arm/neon/mull.c
   arm/neon/orr.c
   arm/neon/padd.c
+  arm/neon/paddl.c
   arm/neon/pmax.c
   arm/neon/pmin.c
   arm/neon/reinterpret.c
