neon: implementation of paddl
I decided to copy-paste the implementation of addl and adjust it,
because using uzp{1,2} wasn't feasible (as there is only one vector
argument)

Miscelaneous fixes -- whitespace, typos

remove trailing whitespace

Fix typo

Fix typo again

Reimplement the first half of paddl -- not paddlq

Rewrite paddlq with suggested changes

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -125,6 +125,7 @@ set(TEST_SOURCES_C
   arm/neon/mull.c
   arm/neon/orr.c
   arm/neon/padd.c
+  arm/neon/paddl.c
   arm/neon/pmax.c
   arm/neon/pmin.c
   arm/neon/reinterpret.c
