neon: implementation of trn
Nothing special here, aside from maybe not working on ICC due to the
same bug.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -130,6 +130,9 @@ set(TEST_SOURCES_C
   arm/neon/shl_n.c
   arm/neon/shr_n.c
   arm/neon/sub.c
+  arm/neon/trn.c
+  arm/neon/trn1.c
+  arm/neon/trn2.c
   arm/neon/uzp1.c
   arm/neon/uzp2.c)
 
