neon: add sra_n and sraq_n intrinsics
Fixes #432

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -132,6 +132,7 @@ set(TEST_SOURCES_C
   arm/neon/shl.c
   arm/neon/shl_n.c
   arm/neon/shr_n.c
+  arm/neon/sra_n.c
   arm/neon/sub.c
   arm/neon/trn.c
   arm/neon/trn1.c
