neon: implement cltz

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -114,6 +114,7 @@ set(TEST_SOURCES_C
   arm/neon/and.c
   arm/neon/bsl.c
   arm/neon/cagt.c
+  arm/neon/cltz.c
   arm/neon/dup_n.c
   arm/neon/eor.c
   arm/neon/get_high.c
