neon: Add implementation of ceqz
Remove testgen code

Change implementation of ceqz

Remove powerpc

Fix typo

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -115,6 +115,7 @@ set(TEST_SOURCES_C
   arm/neon/bsl.c
   arm/neon/cagt.c
   arm/neon/ceq.c
+  arm/neon/ceqz.c
   arm/neon/cltz.c
   arm/neon/dup_n.c
   arm/neon/eor.c
