gh-actions: use grep instead of git to search for trailing whitespace
The git version would only look at the last patch, which means
whitespace could (and did) sneak in as part of multi-patch changes.

This also removes the whitespace that snuck snuck in.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
       with:
         fetch-depth: 2
     - name: Trailing whitespace
-      run: git diff --check HEAD^
+      run: find simde/ -name '*.c' -o -name '*.h' -exec grep -nP '\s+$' {} + && exit 1 || exit 0
     - name: Tabs
       run: find simde/ -name '*.c' -o -name '*.h' -exec grep -nP '\t' {} + && exit 1 || exit 0
     # s/8/16/ will result in this if the input is x86.
