--- a/test/arm/neon/meson.build
+++ b/test/arm/neon/meson.build
@@ -8,6 +8,8 @@ simde_test_arm_neon_tests = [
   'bsl',
   'cagt',
   'ceq',
+  'cgt',
+  'cgtz',
   'cltz',
   'dup_n',
   'eor',
@@ -27,6 +29,8 @@ simde_test_arm_neon_tests = [
   'pmax',
   'pmin',
   'reinterpret',
+  'rshr_n',
+  'rsra_n',
   'shl',
   'shl_n',
   'shr_n',
@@ -35,6 +39,7 @@ simde_test_arm_neon_tests = [
   'trn',
   'trn1',
   'trn2',
+  'tst',
   'uzp',
   'uzp1',
   'uzp2',
