neon: implement combine functions
Fixes #448

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -117,6 +117,7 @@ set(TEST_SOURCES_C
   arm/neon/ceq.c
   arm/neon/ceqz.c
   arm/neon/cltz.c
+  arm/neon/combine.c
   arm/neon/dup_n.c
   arm/neon/eor.c
   arm/neon/get_high.c
