neon: implementation of qmovn and helpers
Add test gen

Add testcases

Fix type error

Fix test generation

Finish implementation

Refactor comparisons

Regenerate tests

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -141,6 +141,7 @@ set(TEST_SOURCES_C
   arm/neon/paddl.c
   arm/neon/pmax.c
   arm/neon/pmin.c
+  arm/neon/qmovn.c
   arm/neon/reinterpret.c
   arm/neon/shl.c
   arm/neon/shl_n.c
