neon: add cgt, cgtz, mvn, and tst
Fixes #445

--- a/test/arm/neon/meson.build
+++ b/test/arm/neon/meson.build
@@ -9,6 +9,8 @@ simde_test_arm_neon_tests = [
   'cagt',
   'ceq',
   'ceqz',
+  'cgt',
+  'cgtz',
   'cltz',
   'combine',
   'dup_n',
@@ -25,6 +27,7 @@ simde_test_arm_neon_tests = [
   'movl_high',
   'mul',
   'mull',
+  'mvn',
   'neg',
   'orr',
   'padd',
@@ -40,6 +43,7 @@ simde_test_arm_neon_tests = [
   'trn',
   'trn1',
   'trn2',
+  'tst',
   'uzp',
   'uzp1',
   'uzp2',
