neon: Add cge cgez cle and clez intrinsics
Add cge cgez cle and clez intrinsics

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -116,8 +116,12 @@ set(TEST_SOURCES_C
   arm/neon/cagt.c
   arm/neon/ceq.c
   arm/neon/ceqz.c
+  arm/neon/cge.c
+  arm/neon/cgez.c
   arm/neon/cgt.c
   arm/neon/cgtz.c
+  arm/neon/cle.c
+  arm/neon/clez.c
   arm/neon/cltz.c
   arm/neon/combine.c
   arm/neon/dup_n.c
