--- a/test/arm/neon/meson.build
+++ b/test/arm/neon/meson.build
@@ -9,8 +9,12 @@ simde_test_arm_neon_tests = [
   'cagt',
   'ceq',
   'ceqz',
+  'cge',
+  'cgez',
   'cgt',
   'cgtz',
+  'cle',
+  'clez',
   'cltz',
   'combine',
   'dup_n',
