neon: add st1_lane implementations
Fixes #451

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -146,6 +146,7 @@ set(TEST_SOURCES_C
   arm/neon/pmax.c
   arm/neon/pmin.c
   arm/neon/reinterpret.c
+  arm/neon/st1_lane.c
   arm/neon/shl.c
   arm/neon/shl_n.c
   arm/neon/shr_n.c
