--- a/.travis.yml
+++ b/.travis.yml
@@ -189,6 +189,11 @@ jobs:
     if: branch != master OR type == pull_request
     os: osx
 
+  - name: osx_xcode11
+    if: branch != master OR type == pull_request
+    os: osx
+    osx_image: xcode11
+
   - name: msvc x86
     if: branch != master OR type == pull_request
     os: windows
