--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -147,6 +147,7 @@ set(TEST_SOURCES_C
   arm/neon/pmax.c
   arm/neon/pmin.c
   arm/neon/qmovn.c
+  arm/neon/qmovn_high.c
   arm/neon/reinterpret.c
   arm/neon/rshr_n.c
   arm/neon/rsra_n.c
