--- a/meson.build
+++ b/meson.build
@@ -6,33 +6,33 @@ project('SIMDe', 'c', 'cpp',
 cc = meson.get_compiler('c')
 cxx = meson.get_compiler('cpp')
 
-if not meson.is_subproject() and if get_option('tests')
+if not meson.is_subproject() and get_option('tests')
   subdir('test')
 endif
 
 install_headers(
-    [
-		'simde/hedley.h',
-		'simde/check.h',
-		'simde/debug-trap.h',
-		'simde/simde-arch.h',
-		'simde/simde-common.h',
+  files([
+    'simde/hedley.h',
+    'simde/check.h',
+    'simde/debug-trap.h',
+    'simde/simde-arch.h',
+    'simde/simde-common.h',
 
-		'simde/x86/avx2.h',
-		'simde/x86/avx512f.h',
-		'simde/x86/avx512bw.h',
-		'simde/x86/avx512vl.h',
-		'simde/x86/avx512dq.h',
-		'simde/x86/avx512cd.h',
-		'simde/x86/fma.h',
-		'simde/x86/gfni.h',
-		'simde/x86/mmx.h',
-		'simde/x86/sse.h',
-		'simde/x86/sse2.h',
-		'simde/x86/sse3.h',
-		'simde/x86/sse4.1.h',
-		'simde/x86/sse4.2.h',
-		'simde/x86/ssse3.h',
-		'simde/x86/svml.h',
-    ],
-    subdir: 'simde')
+    'simde/x86/avx2.h',
+    'simde/x86/avx512f.h',
+    'simde/x86/avx512bw.h',
+    'simde/x86/avx512vl.h',
+    'simde/x86/avx512dq.h',
+    'simde/x86/avx512cd.h',
+    'simde/x86/fma.h',
+    'simde/x86/gfni.h',
+    'simde/x86/mmx.h',
+    'simde/x86/sse.h',
+    'simde/x86/sse2.h',
+    'simde/x86/sse3.h',
+    'simde/x86/sse4.1.h',
+    'simde/x86/sse4.2.h',
+    'simde/x86/ssse3.h',
+    'simde/x86/svml.h',
+    ]),
+  subdir: 'simde')
