neon: Implementation of qshl
Fix type of b

Fix emulation so far

Add testcases

Determine overflow properly

Note the (7 - b_value) instead of (8 - b_value) for signed values

Remove debug function

remove debug functions v2

reinterpret-cast

Add casts

Fix altivec

Fix casts

add explicit casts to silence compiler warnings

Add qshl to top level meson.build

--- a/meson.build
+++ b/meson.build
@@ -101,6 +101,7 @@ if not meson.is_subproject()
       'simde/arm/neon/qadd.h',
       'simde/arm/neon/qmovn.h',
       'simde/arm/neon/qmovn_high.h',
+      'simde/arm/neon/qshl.h',
       'simde/arm/neon/reinterpret.h',
       'simde/arm/neon/rshr_n.h',
       'simde/arm/neon/rsra_n.h',
