neon: implementation of qdmull, qdmulh
There's something like 20 commits in here, you'll have to check the
reflog for the whole history, but hopefully, it all works out.

remove qshl references

trailing whitespace

more trailing whitespace

Fix native alias

Misc fixes after PR:

Add to toplevel meson.build

Fix return statement in A64

Add abs value function and silence windows warning

--- a/meson.build
+++ b/meson.build
@@ -99,6 +99,8 @@ if not meson.is_subproject()
       'simde/arm/neon/pmax.h',
       'simde/arm/neon/pmin.h',
       'simde/arm/neon/qadd.h',
+      'simde/arm/neon/qdmulh.h',
+      'simde/arm/neon/qdmull.h',
       'simde/arm/neon/qmovn.h',
       'simde/arm/neon/qmovn_high.h',
       'simde/arm/neon/reinterpret.h',
