--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -149,6 +149,8 @@ set(TEST_SOURCES_C
   arm/neon/pmax.c
   arm/neon/pmin.c
   arm/neon/qadd.c
+  arm/neon/qdmulh.c
+  arm/neon/qdmull.c
   arm/neon/qmovn.c
   arm/neon/qmovn_high.c
   arm/neon/reinterpret.c
