--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -152,6 +152,7 @@ set(TEST_SOURCES_C
   arm/neon/qmovn.c
   arm/neon/qmovn_high.c
   arm/neon/reinterpret.c
+  arm/neon/rshl.c
   arm/neon/rshr_n.c
   arm/neon/rsra_n.c
   arm/neon/st1_lane.c
