meson: share list of NEON famlies between test files and headers

--- a/meson.build
+++ b/meson.build
@@ -6,9 +6,83 @@ project('SIMDe', 'c', 'cpp',
 cc = meson.get_compiler('c')
 cxx = meson.get_compiler('cpp')
 
+simde_neon_families = [
+  'abs',
+  'add',
+  'addl',
+  'addl_high',
+  'addw',
+  'and',
+  'bsl',
+  'cagt',
+  'ceq',
+  'ceqz',
+  'cge',
+  'cgez',
+  'cgt',
+  'cgtz',
+  'cle',
+  'clez',
+  'clt',
+  'cltz',
+  'combine',
+  'dup_n',
+  'eor',
+  'get_high',
+  'get_lane',
+  'get_low',
+  'ld1',
+  'max',
+  'min',
+  'mla',
+  'mlal',
+  'mlal_high',
+  'movl',
+  'movl_high',
+  'movn',
+  'mul',
+  'mull',
+  'mvn',
+  'neg',
+  'orr',
+  'padal',
+  'padd',
+  'paddl',
+  'pmax',
+  'pmin',
+  'qadd',
+  'qmovn',
+  'qmovn_high',
+  'reinterpret',
+  'rshr_n',
+  'rsra_n',
+  'shl',
+  'shl_n',
+  'shr_n',
+  'sra_n',
+  'st1',
+  'st1_lane',
+  'sub',
+  'trn1',
+  'trn2',
+  'trn',
+  'tst',
+  'uzp1',
+  'uzp2',
+  'uzp',
+  'zip1',
+  'zip2',
+  'zip',
+]
+
 if not meson.is_subproject() and get_option('tests')
   subdir('test')
 endif
+
+simde_neon_family_headers = ['simde/arm/neon/types.h']
+foreach neon_family : simde_neon_families
+  simde_neon_family_headers += 'simde/arm/neon/' + neon_family + '.h'
+endforeach
 
 if not meson.is_subproject()
   install_headers(
@@ -55,74 +129,7 @@ if not meson.is_subproject()
     subdir: 'simde/arm')
 
   install_headers(
-    files([
-      'simde/arm/neon/abs.h',
-      'simde/arm/neon/add.h',
-      'simde/arm/neon/addl.h',
-      'simde/arm/neon/addw.h',
-      'simde/arm/neon/and.h',
-      'simde/arm/neon/bsl.h',
-      'simde/arm/neon/cagt.h',
-      'simde/arm/neon/ceq.h',
-      'simde/arm/neon/ceqz.h',
-      'simde/arm/neon/cge.h',
-      'simde/arm/neon/cgez.h',
-      'simde/arm/neon/cgt.h',
-      'simde/arm/neon/cgtz.h',
-      'simde/arm/neon/cle.h',
-      'simde/arm/neon/clez.h',
-      'simde/arm/neon/clt.h',
-      'simde/arm/neon/cltz.h',
-      'simde/arm/neon/combine.h',
-      'simde/arm/neon/dup_n.h',
-      'simde/arm/neon/eor.h',
-      'simde/arm/neon/get_high.h',
-      'simde/arm/neon/get_lane.h',
-      'simde/arm/neon/get_low.h',
-      'simde/arm/neon/ld1.h',
-      'simde/arm/neon/max.h',
-      'simde/arm/neon/min.h',
-      'simde/arm/neon/mla.h',
-      'simde/arm/neon/mlal.h',
-      'simde/arm/neon/mlal_high.h',
-      'simde/arm/neon/movl.h',
-      'simde/arm/neon/movl_high.h',
-      'simde/arm/neon/movn.h',
-      'simde/arm/neon/mul.h',
-      'simde/arm/neon/mull.h',
-      'simde/arm/neon/mvn.h',
-      'simde/arm/neon/neg.h',
-      'simde/arm/neon/orr.h',
-      'simde/arm/neon/padal.h',
-      'simde/arm/neon/padd.h',
-      'simde/arm/neon/paddl.h',
-      'simde/arm/neon/pmax.h',
-      'simde/arm/neon/pmin.h',
-      'simde/arm/neon/qadd.h',
-      'simde/arm/neon/qmovn.h',
-      'simde/arm/neon/qmovn_high.h',
-      'simde/arm/neon/reinterpret.h',
-      'simde/arm/neon/rshr_n.h',
-      'simde/arm/neon/rsra_n.h',
-      'simde/arm/neon/shl.h',
-      'simde/arm/neon/shl_n.h',
-      'simde/arm/neon/shr_n.h',
-      'simde/arm/neon/sra_n.h',
-      'simde/arm/neon/st1.h',
-      'simde/arm/neon/st1_lane.h',
-      'simde/arm/neon/sub.h',
-      'simde/arm/neon/trn1.h',
-      'simde/arm/neon/trn2.h',
-      'simde/arm/neon/trn.h',
-      'simde/arm/neon/tst.h',
-      'simde/arm/neon/types.h',
-      'simde/arm/neon/uzp1.h',
-      'simde/arm/neon/uzp2.h',
-      'simde/arm/neon/uzp.h',
-      'simde/arm/neon/zip1.h',
-      'simde/arm/neon/zip2.h',
-      'simde/arm/neon/zip.h',
-      ]),
+    files(simde_neon_family_headers),
     subdir: 'simde/arm/neon')
 
   import('pkgconfig').generate(
