neon: Implementation of dot
Fix type typos

fix size typo

Add testcases, fix typo in #if

Fix a bunch of mistakes

regen values, fix type errors, etc

test other #includes

Proper #ifdef

formatting bot

add proper #ifdef

fix meson.build

fix meson.build

fix meson.build

start rewrite of dot implementation

Add headers

ffix typo

change (a, b, c) -> (r, a, b)

type typo

semicolon

Rewrite fast arm version

fix bugs

fix typo

typo

remove testcases, gen

add testcases again

Fix emulation, write slightly cleaner

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -125,6 +125,7 @@ set(TEST_SOURCES_C
   arm/neon/clt.c
   arm/neon/cltz.c
   arm/neon/combine.c
+  arm/neon/dot.c
   arm/neon/dup_n.c
   arm/neon/eor.c
   arm/neon/get_high.c
