neon: implementation of ext
note: n higher than # lanes is illegal input, says compiler on arm

Fix aarch64 typo

silence warnings on MSVC, clang

Rewrite implementation of ext

meson.build move

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -127,6 +127,7 @@ set(TEST_SOURCES_C
   arm/neon/combine.c
   arm/neon/dup_n.c
   arm/neon/eor.c
+  arm/neon/ext.c
   arm/neon/get_high.c
   arm/neon/get_lane.c
   arm/neon/get_low.c
