neon: add tbl with tbl1, tbl2, tbl3 and tbl4 intrinsics
Also add x3 and x4 types and test operations.

--- a/meson.build
+++ b/meson.build
@@ -111,6 +111,7 @@ if not meson.is_subproject()
       'simde/arm/neon/st1.h',
       'simde/arm/neon/st1_lane.h',
       'simde/arm/neon/sub.h',
+      'simde/arm/neon/tbl.h',
       'simde/arm/neon/trn1.h',
       'simde/arm/neon/trn2.h',
       'simde/arm/neon/trn.h',
