--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -160,6 +160,7 @@ set(TEST_SOURCES_C
   arm/neon/shr_n.c
   arm/neon/sra_n.c
   arm/neon/sub.c
+  arm/neon/tbl.c
   arm/neon/trn.c
   arm/neon/trn1.c
   arm/neon/trn2.c
