neon: implementation of rhadd
rewrite parts of rhadd.h, add test values

fix casts

Add clang ifdef, change .values[i]

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -156,6 +156,7 @@ set(TEST_SOURCES_C
   arm/neon/qmovn.c
   arm/neon/qmovn_high.c
   arm/neon/reinterpret.c
+  arm/neon/rhadd.c
   arm/neon/rshl.c
   arm/neon/rshr_n.c
   arm/neon/rsra_n.c
