neon: implement dot_lane
Fixes #507

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -126,6 +126,7 @@ set(TEST_SOURCES_C
   arm/neon/cltz.c
   arm/neon/combine.c
   arm/neon/dot.c
+  arm/neon/dot_lane.c
   arm/neon/dup_n.c
   arm/neon/eor.c
   arm/neon/ext.c
