--- a/meson_options.txt
+++ b/meson_options.txt
@@ -2,3 +2,8 @@ option('tests',
     type : 'boolean',
     value : true,
     description : 'Enable dependencies required for testing')
+
+option('sleef',
+    type : 'feature',
+    value : 'disabled',
+    description : 'Enable SLEEF integration')
